<resources>
    <string name="app_name">EduEnvi</string>
    <string name="firstName">Meno</string>
    <string name="lastName">Priezvisko</string>
    <string name="userName">Používateľské meno</string>
    <string name="loginCode">Prihlasovací kód</string>
    <string name="email">Email</string>
    <string name="password">Heslo</string>
    <string name="new_password">Nové heslo</string>
    <string name="classroomName">Meno triedy</string>
    <string name="taskName">Meno úlohy</string>
    <string name="groupName">Meno skupiny</string>

    <string name="login">Prihlásenie</string>
    <string name="profile">Profil</string>
    <string name="signup">Registrácia</string>
    <string name="myClassrooms">Moje triedy</string>

    <string name="inGroup">V skupine</string>
    <string name="notInGroup">Mimo skupiny</string>
    <string name="tasksIn">Priradené úlohy</string>
    <string name="tasksNotIn">Dostupné úlohy</string>
    <string name="soloTasks">Samostatné úlohy</string>
    <string name="groupTasks">Skupinové úlohy</string>
    <string name="terminatedTasks">Minulé úlohy</string>
    <string name="solo">samostatná</string>
    <string name="group">skupinová</string>
    <string name="free">nepriradená</string>
    <string name="this_step_is_irreversible">Tento krok je nevratný</string>
    <string name="forgottenPassword">Zabudli ste heslo?</string>
    <string name="newHere">Nemáte ešte účet?</string>
    <string name="type">Typ</string>
    <string name="visibleFrom">Viditeľná od</string>
    <string name="deadline">Deadline</string>
    <string name="text">Text</string>
    <string name="boardSize">Veľkosť plochy</string>
    <string name="setImages">Nastaviť obrázky</string>
    <string name="deleteBoard">Zahodiť plochu</string>
    <string name="resizeBoard">Zmeniť veľkosť plochy</string>
    <string name="addAnotherBoard">Vytvoriť ďaľši plochu</string>
    <string name="deleteTask">Zahodiť úlohu</string>
    <string name="saveTask">Uložiť úlohu</string>
    <string name="x">x</string>
    <string name="emptyTile">Voľné políčko</string>
    <string name="wallTile">Zátarasa</string>
    <string name="startTile">Štartovné políčko</string>
    <string name="pathTile">Označenie cesty</string>

    <string name="rating">Hodnotenie</string>
    <string name="set">Nastaviť</string>
    <string name="delete">Odstrániť</string>
    <string name="send">Odoslať</string>
    <string name="ok">OK</string>
    <string name="confirm">Potvrdiť</string>
    <string name="logIn">Prihlásiť sa</string>
    <string name="createAccount">Registrovať</string>
    <string name="save">Uložiť</string>
    <string name="edit">Upraviť</string>
    <string name="create">Vytvoriť</string>
    <string name="changePassword">Zmeniť heslo</string>
    <string name="cancel">Zrušiť</string>
    <string name="teacher">Učiteľ</string>
    <string name="student">Žiak</string>

    <string name="backCodeDescription">naspäť</string>
    <string name="logOutDescription">odhlásiť sa</string>
    <string name="addCodeDescription">pridaj</string>
    <string name="editImageCodeDescription">upraviť obrázok</string>
    <string name="studentsCodeDescription">študenti</string>
    <string name="groupsCodeDescription">skupiny</string>
    <string name="classroomCodeDescription">trieda</string>
    <string name="tasksCodeDescription">úlohy</string>
    <string name="closeCodeDescription">zatvoriť</string>
    <string name="generateCodeDescription">vygeneruj nový kód</string>
    <string name="menuCodeDescription">menu</string>
    <string name="prevBoardCodeDescription">predchadzajúca plocha</string>
    <string name="nextBoardCodeDescription">nasledujúca plocha</string>
    <string name="saveCodeDescription">uložiť úlohu</string>
    <string name="resetCodeDescription">vynulovať</string>
    <string name="editCodeDescription">upraviť</string>
    <string name="deleteCodeDescription">odstrániť</string>
    <string name="groups">Skupiny</string>
    <string name="students">Žiaci</string>
    <string name="emptyDate">...</string>
    <string name="editGraphicPartTask">Upraviť grafické zadenie</string>
    <string name="close">Zatvoriť</string>
</resources>