<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mainPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Tertiary">

        <ImageButton
            android:id="@+id/backButton"
            style="@style/backButtonOnPrimary"
            android:contentDescription="@string/backCodeDescription" />

        <TextView
            android:id="@+id/groupName"
            style="@style/headline"
            android:text="@string/groupName" />

        <GridView
            android:id="@+id/studentsLayout"
            style="@style/scrollGridView"
            android:numColumns="3"
            tools:listitem="@layout/grid_x_list_item" />

        <ImageButton
            android:id="@+id/addButton"
            style="@style/addButton"
            android:contentDescription="@string/addCodeDescription" />

        <LinearLayout style="@style/bottomNavigationLayout">

            <ImageButton
                android:id="@+id/tasksButton"
                style="@style/navButton"
                android:contentDescription="@string/tasksCodeDescription"
                android:src="@drawable/tasks_button_wrapper" />

            <ImageButton
                android:id="@+id/studentsButton"
                style="@style/navButton"
                android:contentDescription="@string/studentsCodeDescription"
                android:src="@drawable/students_highlighted_button_wrapper" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/studentsPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Surface"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/closeStudentsPanel"
            style="@style/backButtonOnBackground"
            android:contentDescription="@string/closeCodeDescription" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:fadingEdgeLength="80dp"
            android:requiresFadingEdge="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textInGroup"
                    style="@style/chipTextView"
                    android:text="@string/inGroup" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupIn"
                    style="@style/chipGroup"
                    app:singleLine="false"
                    app:singleSelection="true" />

                <TextView
                    android:id="@+id/textNotInGroup"
                    style="@style/chipTextView"
                    android:text="@string/notInGroup" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupNotIn"
                    style="@style/chipGroup"
                    app:singleLine="false"
                    app:singleSelection="true" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/saveButton"
            style="@style/actionButton"
            android:layout_alignParentBottom="true"
            android:layout_margin="25dp"
            android:text="@string/save" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/deletePanel"
        style="@style/backgroundLayout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/bottom_layout_background_on_primary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deleteText"
                style="@style/deletePanelText1" />

            <TextView style="@style/deletePanelText2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/closeDeletePanel"
                    style="@style/smallActionCancelButton"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/confirmDelete"
                    style="@style/smallActionDeleteButton"
                    android:text="@string/delete" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>