<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/backButtonDark"
        android:contentDescription="@string/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            style="@style/headlineVerticalLayout"
            android:text="@string/login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameTextInputLayout"
            style="@style/inputField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                style="@style/inputFieldEditText"
                android:hint="@string/userName"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            style="@style/inputField"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/inputFieldEditText"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/actionButton"
            android:text="@string/logIn" />

        <Button
            android:id="@+id/forgotten_password_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/transparent"
            android:text="@string/forgottenPassword"
            android:textAllCaps="false"
            android:textColor="@color/Accent"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Nemáte ešte účet?"
            android:textAlignment="center" />

        <Button
            android:id="@+id/signup_button"
            style="@style/actionButton"
            android:text="@string/signup" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgottenPasswordPanel"
        style="@style/backgroundLayout"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_margin="25dp"
            android:background="@drawable/center_layout_background"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageButton
                    android:id="@+id/backToLoginButton"
                    style="@style/backButtonDark"
                    android:contentDescription="@string/back" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                style="@style/inputField"
                android:layout_marginHorizontal="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/inputFieldEditTextColor"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sendButton"
                style="@style/actionButton"
                android:layout_marginHorizontal="25dp"
                android:text="@string/send" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>