<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Tertiary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mainPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backButton"
            style="@style/backButton"
            android:contentDescription="@string/backCodeDescription" />

        <TextView
            android:id="@+id/classroomName"
            style="@style/headline"
            android:text="@string/classroomName" />

        <GridView
            android:id="@+id/studentsLayout"
            style="@style/scrollGridView"
            android:numColumns="3"
            tools:listitem="@layout/grid_list_item" />

        <ImageButton
            android:id="@+id/addButton"
            style="@style/addButton"
            android:contentDescription="@string/addCodeDescription" />

        <LinearLayout style="@style/bottomNavigationLayout">

            <ImageButton
                android:id="@+id/tasksButton"
                style="@style/navButton"
                android:contentDescription="@string/tasksCodeDescription"
                android:src="@mipmap/tasks" />

            <ImageButton
                android:id="@+id/studentsButton"
                style="@style/navButton"
                android:contentDescription="@string/studentsCodeDescription"
                android:src="@mipmap/students_highlighted" />

            <ImageButton
                android:id="@+id/groupsButton"
                style="@style/navButton"
                android:contentDescription="@string/groupsCodeDescription"
                android:src="@mipmap/groups" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/studentPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Surface"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/closeStudentPanel"
            style="@style/backButtonDark"
            android:contentDescription="@string/closeCodeDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="25dp">


            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/studentImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:src="@drawable/baseline_account_circle_dark_24" />

                <ImageButton
                    android:id="@+id/editStudentImage"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/oval_50_primary"
                    android:contentDescription="@string/edit"
                    android:src="@drawable/baseline_edit_24" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameTextInputLayout"
                style="@style/inputField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    style="@style/inputFieldEditTextColor"
                    android:hint="@string/firstName"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTextInputLayout"
                style="@style/inputField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    style="@style/inputFieldEditTextColor"
                    android:hint="@string/lastName"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginCodeTextInputLayout"
                    style="@style/inputField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginCode"
                        style="@style/inputFieldEditTextColor"
                        android:hint="@string/loginCode"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/generateLoginCode"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/transparent"
                    android:contentDescription="@string/generateCodeDescription"
                    android:src="@drawable/baseline_renew_dark_24" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/classroomTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/oval_50_background"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:visibility="gone">

                <AutoCompleteTextView
                    android:id="@+id/classroom"
                    style="@style/inputFieldEditTextColor"
                    android:hint="@string/classroomCodeDescription"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveButton"
                style="@style/actionButton"
                android:text="@string/create" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/editPanel"
        style="@style/backgroundLayout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/bottom_layout_background"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageButton
                    android:id="@+id/closeEditPanel"
                    style="@style/closeButton"
                    android:contentDescription="@string/closeCodeDescription" />
            </RelativeLayout>

            <Button
                android:id="@+id/editButton"
                style="@style/actionButton"
                android:layout_marginHorizontal="25dp"
                android:text="@string/edit" />

            <Button
                android:id="@+id/deleteButton"
                style="@style/actionButton"
                android:layout_marginHorizontal="25dp"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deletePanel"
        style="@style/backgroundLayout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/bottom_layout_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deleteText"
                style="@style/deletePanelText1" />

            <TextView style="@style/deletePanelText2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/closeDeletePanel"
                    style="@style/smallActionCancelButton"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/confirmDelete"
                    style="@style/smallActionDeleteButton"
                    android:text="@string/delete" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Background"
        android:visibility="gone">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp" />

        <ImageButton
            android:id="@+id/closeFragmentButton"
            style="@style/backButtonDark"
            android:contentDescription="@string/backCodeDescription" />

    </RelativeLayout>
</RelativeLayout>