<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mainPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Tertiary">

        <ImageButton
            android:id="@+id/backButton"
            style="@style/backButtonOnPrimary"
            android:contentDescription="@string/backCodeDescription" />

        <TextView
            android:id="@+id/studentName"
            style="@style/headline"
            android:text="@string/firstName" />

        <ListView
            android:id="@+id/tasksLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:background="@color/Background"
            android:paddingHorizontal="5dp"
            tools:listitem="@layout/task_list_item" />

        <ImageButton
            android:id="@+id/addButton"
            style="@style/addButton"
            android:contentDescription="@string/addCodeDescription" />

        <LinearLayout style="@style/bottomNavigationLayout">

            <ImageButton
                android:id="@+id/tasksButton"
                style="@style/navButton"
                android:contentDescription="@string/tasksCodeDescription"
                android:src="@drawable/tasks_highlighted_button_wrapper" />

            <ImageButton
                android:id="@+id/groupsButton"
                style="@style/navButton"
                android:contentDescription="@string/groupsCodeDescription"
                android:src="@drawable/groups_button_wrapper" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/assignTaskFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Surface"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/closeAssignTaskFragmentButton"
            style="@style/backButtonOnBackground"
            android:contentDescription="@string/backCodeDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/createNewTask"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/oval_50_gray"
                android:src="@drawable/baseline_add_on_primary_24" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/assignTaskFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/editPanel"
        style="@style/backgroundLayout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/bottom_layout_background_on_primary"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageButton
                    android:id="@+id/closeEditPanel"
                    style="@style/closeButtonOnBackground"
                    android:contentDescription="@string/closeCodeDescription" />
            </RelativeLayout>

            <Button
                android:id="@+id/editButton"
                style="@style/actionButtonEdit"
                android:layout_marginHorizontal="25dp"
                android:text="@string/edit" />

            <Button
                android:id="@+id/deleteButton"
                style="@style/actionButtonDelete"
                android:layout_marginHorizontal="25dp"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deletePanel"
        style="@style/backgroundLayout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/bottom_layout_background_on_primary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deleteText"
                style="@style/deletePanelText1" />

            <TextView style="@style/deletePanelText2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/closeDeletePanel"
                    style="@style/smallActionCancelButton"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/confirmDelete"
                    style="@style/smallActionDeleteButton"
                    android:text="@string/delete" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>